--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,7 @@
   "printWidth": 100,
   "tabWidth": 2,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
