--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+
     "start": "node dist/index.js",
+
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
@@ -27,7 +31,8 @@
     "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.8.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   },
   "dependencies": {
     "typescript-eslint": "^8.53.0"
